# cookiecutter-python

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh
{{ cookiecutter.project_name  }}/: cli.py  mypy.ini  noxfile.py  pylintrc  pyproject.toml
{{ cookiecutter.project_name  }}/src/: main.py
{{ cookiecutter.project_name  }}/tests/: test_main.py
