[tool.poetry]
name = "cookiecutter-python"
version = "0.1.0"
description = "Default template for python projects in Bethink inc."
authors = ["miloszbednarzak <milosz.bednarzak@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
