[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = []
readme = "README.md"
{%- if cookiecutter.create_remote -%}
repository = "https://github.com/{{ cookiecutter.github_org_name }}/{{ cookiecutter.project_name }}"
{% endif %}
packages = [ { include = "src" } ]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
python-toolbox = { git = "git@github.com:bethinkpl/python-toolbox.git", branch = "master"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cli = 'cli:main'

[tool.pytest.ini_options]
minversion = "6.0"

[tool.coverage.run]
branch = true
data_file = "coverage/.coverage"
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.html]
directory = "coverage/html_report"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
